--- a/src/app/empresa/empresa.component.html
+++ b/src/app/empresa/empresa.component.html
@@ -1,22 +1,48 @@
-<section class="info">
-    <h2>Nosotros</h2>
+<section class="container my-5">
+    <section class="row">
+        <section class="col-12 col-md-8">
+            <h2>Nosotros</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt eum laboriosam itaque consequatur
+                quibusdam iure veniam voluptate unde, repellendus sed debitis quisquam eius cum accusamus soluta
+                aperiam.
+                Quos, nobis perspiciatis!</p>
+            <section class="row">
+                <section class="col-12 col-md-4 text-center">
+                    <section class="card h-100 shadow p-3">
+                        <h4>Vision</h4>
+                        <img src="../../assets/img/img1.jpg" class="img-fluid w-100">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolore ratione ipsa sunt veniam,
+                            excepturi id
+                            cumque odio quibusdam velit, eaque maiores officia delectus sit officiis quae amet deserunt
+                            facere?</p>
+                    </section>
+                </section>
+                <section class="col-12 col-md-4 text-center">
+                    <section class="card h-100 shadow p-3">
+                        <h4>Mision</h4>
+                        <img src="../../assets/img/images.jpg" class="img-fluid w-100">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi incidunt ad natus corrupti
+                            id dolores
+                            corporis aliquid et rem praesentium neque magni, explicabo vel mollitia accusamus dolore
+                            vitae sit repellat!
+                        </p>
+                    </section>
+                </section>
+                <section class="col-12 col-md-4 text-center">
+                    <section class="card h-100 shadow p-3">
+                        <h3>Bienestar</h3>
+                        <img src="../../assets/img/empresa.jpg" class="img-fluid w-100">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias laudantium in quibusdam qui!
+                            Expedita consequuntur hic dicta natus nobis distinctio at, officiis ex atque quibusdam
+                            obcaecati aperiam vel nulla culpa.istinctio at, officiis ex atque quibusdam obcaecati
+                            aperiam vel nulla culpa.</p>
+                    </section>
+                </section>
+            </section>
+        </section>
+        <section class="col-12 col-md-4 align-self-center">
+            <img src="../../assets/img/bodega.jpg" alt="" class="img-fluid w-100">
+        </section>
 
-    <h4>Vision</h4>
-        <p> Dentro del sector de las bodegas de Calidad consolidar el liderazgo en Navarra y aumentarlo en territorio nacional e internacional.
-            Ser una empresa responsable, eficiente, dinámica y comprometida con la investigación y la innovación como camino para el liderazgo.
-            Seguir siendo una empresa capaz de competir globalmente.
-            Seguir siendo un opción segura y de confianza para nuestros clientes en un mercado atomizado con infinidad de marcas.
-        </p>
-
-    <h4>Mision</h4>
-        <p>Elaboración y comercialización de vinos tintos, blancos y rosados de alta calidad y alto disfrute.
-            Prioritariamente a través del Canal Horeca y Tiendas Especializadas en el ámbito regional, nacional e internacional.
-            Buscando una rentabilidad y un valor para el capital invertido.
-            Contribuyendo al desarrollo de sus trabajadores y de la región.
-            Con una diferenciación en base a unos viñedos propios y a unas instalaciones propias para el control íntegro del proceso de producción y para la consecución de unos vinos con 
-            personalidad propia y notoria.
-        </p>   
-</section>
-<section class="img">
-    
+    </section>
 </section>
