--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,3 +5,18 @@
 
 </section>
 <app-empresa></app-empresa>
+
+<section class="banner2">
+
+</section>
+
+<section>
+    <section class="container my-5">
+        <section class="row row-cols-1 row-cols-md-2 g-3">
+            <section class="col" *ngFor="let producto of productos">
+                
+            </section>
+
+        </section>
+    </section>
+</section>
